--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Masaru
-middle_name: Konishi
+middle_name: K
 last_name: Nobu
 email: mnobu@jamstec.go.jp
 keywords: methanogenesis, photosynthesis, acetogenesis, syntrophy, archaea, bacteria, evolution, ecology, microbiology # add your own keywords or leave empty
